# usbguard-notifier

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  Makefile.am  README.md  RELEASE_PROCESS.md  autogen.sh  configure.ac  usbguard-notifier.conf.in  usbguard-notifier.service.in  usbguard_notifier.service  usbguard_notifier.service.in
.github/workflows/: build.yml
man/: footer.adoc  usbguard-notifier-cli.1.adoc  usbguard-notifier.1.adoc
scripts/: restyle.sh
src/: BuildConfig.h.in  Common.hpp  ConfigParser.cpp  ConfigParser.hpp  IPCMessage.cpp  IPCMessage.hpp  Log.cpp  Log.hpp  Main.cpp  MainCli.cpp  Notifier.cpp  Notifier.hpp  NotifierCLI.cpp  NotifierCLI.hpp  NotifyWrapper.cpp  NotifyWrapper.hpp  Serializer.cpp  Serializer.hpp  build-config.h.in  main.cpp
src/Tests/: Makefile.am  main.cpp
src/Tests/Unit/: test_example.cpp  test_notifier_cli.cpp
